fix: btn-contacts change-color ang sizes, contact-side-form z-index and btns, section-develops hide-view title

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -44,9 +44,11 @@ body {
     color: #c8c8c8;
     text-transform: uppercase;
     margin-bottom: 30px;
-    &.decor{
+
+    &.decor {
       padding-bottom: 60px;
-      &:before{
+
+      &:before {
         position: absolute;
         content: '';
         left: 0;
@@ -128,6 +130,7 @@ body {
   overflow: hidden;
   border: none;
   z-index: 300;
+
   &.ui.background--dark {
     filter: invert(1);
   }
@@ -140,7 +143,6 @@ body {
     position: fixed;
     top: 50%;
   }
-
   .img_written {
     vertical-align: middle;
     -webkit-animation: spin 4s linear infinite;
@@ -173,9 +175,20 @@ body {
     height: 76px;
     right: 30px;
   }
+  @include respond-to($sm) {
+    position: fixed;
+    bottom: 28px;
+    top: auto;
+    z-index: 300;
+    &.sticky{
+      position: fixed;
+      top: auto;
+      bottom: 28px;
+    }
+  }
   @include respond-to($xs) {
-    width: 57px;
-    height: 57px;
+    width: 67px;
+    height: 67px;
     right: 12px;
     .wrap-img-written {
       -webkit-background-size: 18px;
